# RODONG

./: .gitignore  ADR036_Hardware_Manual.md  README.md
.claude/: settings.local.json
2. OWOD for Rodong/rodong_yolo/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
2. OWOD for Rodong/rodong_yolo/dataset/train/: labels.cache
2. OWOD for Rodong/rodong_yolo/runs/rodong_yolov8n/: args.yaml
docker/: Dockerfile  compose.yaml
rodong_pi_code/downloaded(20260601)/: obstacle_avoidance_node.py  rodong_main.py.bak15  rodong_main.py.bak_uturn  rodong_main_backup_20260519_225505.py  yolo_node.py
rodong_pi_code/patch(20260602)/: CMakeLists.txt  aruco_detector.py  line_detector.py  rodong.launch  rodong_config.py  rodong_control.py  rodong_geometry.py  rodong_main.py  rodong_main.py.bak_rev3_20260601_232400  rodong_sonar.py  rodong_teleop.py  vfh_planner.py  yolo_node.py
rodong_pi_code/patch(20260602)/test/: conftest.py  test_control.py  test_geometry.py  test_sonar.py
rodong_sim/: CMakeLists.txt  README.md  _record_drive.py  package.xml
rodong_sim/launch/: _demo_two_box.launch  rodong_full.launch  rodong_perception.launch  rodong_sim.launch
rodong_sim/models/aruco_marker/: model.config  model.sdf
rodong_sim/models/aruco_marker/materials/scripts/: aruco.material
rodong_sim/scripts/: run_app.py  sim_bridge.py  sim_vision_node.py
rodong_sim/urdf/: rodong_box.urdf
rodong_sim/worlds/: _demo_two_box.world  full_scenario.world  obstacles.world  perception.world  reverse.world
rodong_train/: deploy_rodong12.sh  deploy_rodong13.sh  deploy_uturn.sh  retrain.py  rodong.launch  rodong_main.py  rodong_teleop.py  rodong_train.py  setup_train_env.sh  uturn_block.py  uturn_patch.py  vfh_planner.py
rodong_yolo/dataset/test/labels/: 02feb99c-000043443_jpg.rf.88f1640d09e568560bda549c8395976f.txt  3dc37a8c-000015369_jpg.rf.f3e8138882389474b227c9ce038287fe.txt  46b1cd97-000035588_jpg.rf.de439e69fff887974efceb8d6b9f8ac0.txt  4f60b60e-000002714_jpg.rf.78d798b6950f7c2f7f13f8ec0e1df7dd.txt  (+16 more)
rodong_yolo/dataset/valid/: labels.cache
rodong_yolo/runs/rodong_yolov8n/: results.csv
scripts/: sim_build.sh  sim_cmd.sh  sim_run.sh
xycar_msgs/: CMakeLists.txt  package.xml
xycar_msgs/msg/: xycar_motor.msg
(+372 files in other folders)
