<?xml version="1.0"?>
<package format="2">
  <name>xycar_msgs</name>
  <version>0.0.1</version>
  <description>Minimal xycar_motor message for RODONG simulation (matches the Xycar device message: header/angle/speed).</description>
  <maintainer email="yulee3542@gmail.com">Yulee</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
